--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shuut Food - Catering & Tumpeng Banyuwangi</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <title>Catering Banyuwangi - Shuut Food (Nasi Kotak & Tumpeng)</title>
+  <meta name="description" content="Pesan Catering, Nasi Kotak, dan Tumpeng di Banyuwangi. Melayani acara syukuran, rapat, dan hampers. Halal, enak, dan cepat!">
   <link rel="stylesheet" href="./src/output.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" media="print" onload="this.media='all'">
 </head>
 
 <body class="bg-slate-50 text-slate-800 font-sans overflow-x-hidden">
@@ -23,18 +25,20 @@
         <a href="https://wa.me/85648783485" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-700 transition">Pesan WhatsApp</a>
       </div>
       
-      <button id="menu-btn" class="md:hidden text-2xl text-blue-600">
+      <button id="menu-btn" class="md:hidden text-2xl text-blue-600" aria-label="Buka Menu Navigasi">
         <i class="fas fa-bars"></i>
       </button>
     </div>
     
-    <div id="mobile-menu" class="fixed top-[72px] left-0 w-full bg-white border-t p-4 space-y-4 shadow-lg transform -translate-y-full opacity-0 pointer-events-none transition-all duration-300 ease-in-out z-40">
+    <div id="mobile-menu" class="fixed top-[72px] left-0 w-full bg-white p-4 space-y-4 shadow-lg transform -translate-y-full opacity-0 pointer-events-none transition-all duration-300 ease-in-out z-40">
       <a href="#beranda" class="block font-medium py-2">Beranda</a>
       <a href="#produk" class="block font-medium py-2">Produk</a>
       <a href="#cara-pesan" class="block font-medium py-2">Cara Pesan</a>
       <a href="https://wa.me/85648783485" class="block bg-blue-600 text-white text-center py-3 rounded-xl">Pesan WhatsApp</a>
     </div>
   </nav>
+  
+  <main>
   
   <section id="beranda" class="pt-32 min-h-screen flex justify-center items-center pb-16 px-4 bg-gradient-to-b from-blue-50 to-white">
     <div class="max-w-6xl mx-auto text-center">
@@ -136,6 +140,8 @@
     </div>
   </section>
   
+  </main>
+  
   <footer class="bg-slate-900 text-slate-400 py-12 px-4">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row md:justify-between items-start">
       <div class="mb-4">
@@ -150,7 +156,7 @@
       <div class="mb-4">
         <h4 class="text-white font-bold mb-2">Kontak</h4>
         <p>WhatsApp: +62 856 4878 3485</p>
-        <p>Instagram: @shuutfood_bwi</p>
+        <p>Instagram: @shuutfood_banyuwangi</p>
       </div>
     </div>
     <div class="border-t border-slate-800 mt-8 pt-8 text-center text-sm">
@@ -164,7 +170,7 @@
     AOS.init({
       duration: 800, 
       once: true,
-      offset: 100, // animasi mulai saat elemen berjarak 100px dari layar bawah
+      offset: 100,
     });
   </script>
 
