--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         Nasi Kotak • Tumpeng • Hampers • Catering
       </p>
       <div data-aos="fade-up" data-aos-delay="600" class="flex flex-col md:flex-row justify-center items-center gap-4 mb-6">
-        <a href="https://wa.me/85648783485" class="w-full md:w-auto bg-blue-600 text-white px-8 py-4 cursor-pointer rounded-2xl text-lg font-bold shadow-lg hover:bg-blue-700 transition transform hover:-translate-y-1">
+        <button onclick="HubungiWa()" class="w-full md:w-auto bg-blue-600 text-white px-8 py-4 cursor-pointer rounded-2xl text-lg font-bold shadow-lg hover:bg-blue-700 transition transform hover:-translate-y-1">
           <i class="fab fa-whatsapp mr-2"></i> Pesan Sekarang
-        </a>
+        </button>
       </div>
       <p data-aos="fade-up" data-aos-delay="800" class="text-sm text-slate-500 font-medium italic"><i class="far fa-clock mr-1"></i> Buka 09.00 – 21.00 WIB</p>
     </div>
@@ -134,9 +134,9 @@
   <section class="py-16 px-4">
     <div data-aos="flip-left" class="max-w-4xl mx-auto bg-blue-50 border-2 border-dashed border-blue-200 p-8 md:p-12 rounded-3xl text-center">
       <h2 class="text-2xl md:text-3xl font-bold mb-6">Siap pesan hari ini?</h2>
-      <a href="https://wa.me/85648783485" class="inline-block bg-blue-600 text-white px-10 py-4 rounded-2xl text-xl font-bold shadow-lg hover:bg-blue-700 transition">
+      <button onclick="HubungiWa()" class="inline-block bg-blue-600 text-white px-10 py-4 rounded-2xl text-xl font-bold shadow-lg hover:bg-blue-700 transition">
         <i class="fab fa-whatsapp mr-2"></i> Hubungi via WhatsApp
-      </a>
+      </button>
     </div>
   </section>
   
