--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="l0aQPSSvJekx9TGKm001VW1SrGDq9LPCBvwc5h6zVbQ" />
+  <link rel="icon" href="image/Logo.png" type="image/png">
   <title>Catering Banyuwangi - Shuut Food (Nasi Kotak & Tumpeng)</title>
   <meta name="description" content="Pesan Catering, Nasi Kotak, dan Tumpeng di Banyuwangi. Melayani acara syukuran, rapat, dan hampers. Halal, enak, dan cepat!">
   <link rel="stylesheet" href="./src/output.css">
