--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
   <main>
   
-  <section id="beranda" class="pt-40 pb-20 px-4 bg-gradient-to-b from-blue-50 to-white overflow-hidden">
+  <section id="beranda" class="pt-40 pb-20 px-4 bg-gradient-to-b from-blue-50 to-white min-h-screen flex justify-center items-center overflow-hidden">
     <div class="max-w-6xl mx-auto text-center">
       <span data-aos="fade-up" class="inline-block bg-blue-100 text-blue-700 px-4 py-1 rounded-full text-xs font-bold uppercase tracking-widest mb-6">Area Banyuwangi</span>
       <h1 data-aos="fade-up" data-aos-delay="200" class="text-4xl md:text-6xl font-extrabold text-slate-900 leading-[1.1] mb-6">
